notes.txt
https://ace.c9.io/

TODO  

отримання звітів - синт розбір у problem_router.py


~0~
~1~
~2~2025-09-14T15:21:17
~3~
~0~ # Заданный год уже записан в переменную year, не изменяйте ее значение
 c = 
~1~Error.   File "<stdin>", line 3
    c = 
        ^
SyntaxError: invalid syntax

~2~2025-09-14T15:21:29
~3~
~0~ # Заданный год уже записан в переменную year, не изменяйте ее значение
 c = year // 100
~1~Wrong
~2~2025-09-14T15:21:51
~3~
~0~ # Заданный год уже записан в переменную year, не изменяйте ее значение
 c = (year - 1) // 100
~1~Wrong
~2~2025-09-14T15:22:01
~3~
~0~ # Заданный год уже записан в переменную year, не изменяйте ее значение
 c = (year - 1) // 100 + 1
~1~OK
~2~2025-09-14T15:22:08
~3~
~0~ # Заданный год уже записан в переменную year, не изменяйте ее значение
 c = (year - 1) // 100 + 
~1~Error.   File "<stdin>", line 3
    c = (year - 1) // 100 + 
                            ^
SyntaxError: invalid syntax

~2~2025-09-14T15:22:12
~3~
















--- збірка і запуск продуктового контейнеру pss_cont в мережі mynet
cd c:\git\dock\psscont
docker build -t pss_img .
docker run --network mynet -p 7000:7000 -v C:\Git\PY\DBconverter:/data   --name pss_cont  pss_img


----

встановити докер
запустити мережу mynet
скоп образи 
скоп базу даних
запустити контейнери з заданими іменами з урахуванням підмонтування бази і мережі

docker run --network mynet -p 8000:8000 -v C:\Git\PY\DBconverter:/data   --name problemset_cont  problemset_img